src/Pages/Establishments/Card/Card.css
.my__card__container {
  width: 95%;
  height: 450px;
  margin: 10px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  border: solid black;
  border-radius: 5px;
  text-decoration: none;
  color: black;
  box-shadow: 3px 5px 5px rgba(3, 32, 51, 0.8);
  transition: 400ms;
}

.my__card__container:hover {
  color: black;
  box-shadow: 3px 6px 6px rgba(3, 32, 51, 0.8);
  transform: translateY(-3%);
  background: rgba(0, 0, 0, 0, 0.5);
}

.image__card {
  padding: 2px;
}

.img__card {
  max-width: 100%;
  border-radius: 5px;
}

.card__tittle {
  font-size: 2rem;
  font-family: "Montez", cursive;
}

.card__desc {
  display: grid;
  grid-template-columns: 50% 50%;
}

.card__desc h3 {
  font-size: 1.5rem;
  font-family: "Montez", cursive;
}

@media screen and (max-width: 1200px) {
  .img__card {
    max-width: 80%;
  }
}

@media screen and (max-width: 768px) {
  .my__card__container {
    height: 450px;
  }
}

